page services carousel

--- a/src/features/home/components/Footer/Footer.module.scss
+++ b/src/features/home/components/Footer/Footer.module.scss
@@ -11,10 +11,11 @@
     flex-flow: row nowrap;
     li{
       padding: 2rem;
-      a{
+      span{
         font-size: 1.6rem;
         font-weight: 800;
         color: var(--blue);
+        cursor: pointer;
       }
     }
   }
