--- a/src/features/home/components/Portfolio/Portfolio.module.scss
+++ b/src/features/home/components/Portfolio/Portfolio.module.scss
@@ -18,7 +18,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        a{
+        span{
           font-size: 2.4rem;
           line-height: 2.2rem;
           color: var(--blue);
@@ -28,7 +28,7 @@
         &:hover{
           transition: all 0.2s;
           background: var(--blue);
-          a{
+          span{
             color: var(--white);
           }
         }
@@ -36,7 +36,7 @@
           background: var(--blue);
           border-top-left-radius: 0.5rem;
           border-bottom-left-radius: 0.5rem;
-          a{
+          span{
             color: var(--white);
           }
         }
